# index_framework

./: .gitignore  Cargo.toml  README.md
benches/: my_bench.rs
src/: error.rs  lib.rs  main.rs
src/backend/memory/: backend.rs  builder.rs  compr_postings.rs  compr_storage.rs  dict.rs  file.rs  fix_dic.rs  fix_len_dic.rs  generic.rs  mod.rs  postings.rs  presets.rs  storage.rs
src/backend/memory/dict/: default.rs  fixed_len.rs  mn_dict.rs  mod.rs
src/backend/memory/postings/: compressed.rs  default.rs  mod.rs
src/backend/memory/storage/: c_u32.rs  default.rs  mod.rs  u32map_storage.rs
src/retrieve/: iter.rs  mod.rs
src/retrieve/retriever/: default.rs  mod.rs  ngram.rs
src/traits/: backend.rs  build.rs  deser.rs  dict_item.rs  dictionary.rs  mod.rs  postings.rs  storage.rs
src/utils/: bin_search.rs  const_arr_deser.rs  lock_step.rs  mod.rs
tests/: builder.rs  index.rs  postings.rs
