[package]
name = "index_framework"
version = "0.1.0"
edition = "2021"
authors = ["Jojii <Jojii ät gmx.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.142"
itertools = "0.10.3"
st_file = { git = "https://github.com/JojiiOfficial/st-file" }
compressed_vec = { git = "https://github.com/JojiiOfficial/CompressedVec" }
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }
intersect_iter = "0.1.0"

[dev-dependencies]
criterion = "0.3.6"
resources = { path = "/home/jojii/programming/rust/jotoba/lib/resources/" }

[[bench]]
name = "my_bench"
harness = false
